# yadorilink

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.ja.md  README.md  SECURITY.md  about.hbs  about.toml  deny.toml
crates/yadorilink-cli/: Cargo.toml
crates/yadorilink-cli/src/: control_client.rs  device_config.rs  error.rs  google_auth.rs  grpc.rs  http_client.rs  lib.rs  main.rs  token_store.rs
crates/yadorilink-cli/src/commands/: account.rs  auth.rs  backup.rs  connection_ops.rs  daemon.rs  device.rs  diagnose.rs  durability_force.rs  feedback.rs  folder_ops.rs  gc.rs  ignore.rs  introduce.rs  limits.rs  link.rs  materialization.rs  mod.rs  report.rs  share.rs  status.rs  update.rs  version_history.rs
crates/yadorilink-cli/tests/: desktop_status_parity.rs  diagnose.rs  gc.rs  ignore.rs  limits.rs  link_library_surface.rs  materialization.rs  recovery_model.rs  report.rs  update.rs  version_history.rs
crates/yadorilink-daemon/: Cargo.toml
crates/yadorilink-daemon/examples/: seed_ondemand_test_data.rs  seed_overlay_test_data.rs
crates/yadorilink-daemon/src/: app.rs  change_auth.rs  change_policy.rs  connection_trace.rs  control_socket.rs  coordination_client.rs  daemon_state.rs  device_config.rs  diagnostics_ipc.rs  error.rs  folder_ops.rs  gc.rs  governance_config.rs  hydration.rs  lib.rs  link_manager.rs  main.rs  metrics.rs  metrics_config.rs  nat_traversal.rs  peer_orchestrator.rs  pending_enrollment.rs  rebootstrap_handler.rs  recent_errors.rs  reporting_ipc.rs  resource_lock.rs  shell_ipc.rs  shell_status.rs  supervise.rs  test_support.rs  token_store.rs  transfer_progress.rs  update_ipc.rs  windows_pipe_security.rs
crates/yadorilink-daemon/src/reporting/: consent_store.rs  counters.rs  entry_store.rs  environment.rs  error.rs  error_candidates.rs  hooks.rs  mod.rs  queue.rs  retry.rs  time.rs
crates/yadorilink-daemon/src/update/: mod.rs  (+6 more)
crates/yadorilink-daemon/tests/: advanced_sync_operations_beta_scenarios.rs  chaos_coordination_unreachable.rs  collision_matrix.rs  control_socket.rs  custody_version_present.rs  directory_conflict_matrix.rs  dst_daemon_crash_recovery.rs  dst_daemon_fault_sweep.rs  dst_daemon_smoke.rs  dst_daemon_sweep.rs  dst_daemon_two_device.rs  exec_bit_metadata_conflict.rs  full_replica_handoff_ready.rs  ignore_pattern_rescan.rs  live_burst_batching.rs  load_many_small_files.rs  monkey_chaos.rs  multi_peer_hydration.rs  multiway_conflict_matrix.rs  network_fault_matrix.rs  partition_reconnect_matrix.rs  peer_reachability.rs  perf_regression.rs  removed_device_handoff_ticket.rs  reporting_ipc.rs  revocation_end_to_end.rs  role_loss_saga.rs  shell_ipc.rs  storage_mode_orchestration.rs  taguchi_collision_matrix.rs  taguchi_collision_matrix_v2.rs  taguchi_collision_matrix_v3.rs  three_way_concurrent_edit_conflict.rs  unlink_and_removal_durability.rs  update_manifest_fixture.rs  windows_path_hazard_conflict.rs
crates/yadorilink-desktop-app/: Cargo.toml
crates/yadorilink-desktop-app/src/: account.rs  actions.rs  google_login.rs  ipc_client.rs  lib.rs  login_item.rs  main.rs  status_model.rs  window.rs
crates/yadorilink-desktop-app/tests/: status_app_ipc.rs
crates/yadorilink-ipc-proto/: Cargo.toml  build.rs
crates/yadorilink-ipc-proto/proto/: coordination.proto  daemon_control.proto  local_discovery.proto  relay.proto  shellipc.proto  sync.proto
crates/yadorilink-ipc-proto/src/: framing.rs  lib.rs
crates/yadorilink-local-storage/: Cargo.toml
crates/yadorilink-local-storage/src/: ciphertext_store.rs  error.rs  free_space.rs  fs_backend.rs  lib.rs  traits.rs
crates/yadorilink-local-storage/tests/: fs_backend.rs
crates/yadorilink-reporting/: Cargo.toml
crates/yadorilink-reporting/src/: builder.rs  consent.rs  diagnostics.rs  lib.rs  queue.rs  redact.rs  schema.rs  submission.rs
crates/yadorilink-sync-core/: Cargo.toml
crates/yadorilink-sync-core/src/: adaptive_window.rs  authenticated_history.rs  block_deletion.rs  block_liveness.rs  change.rs  chunker.rs  compaction.rs  conflict.rs  content_crypto.rs  custody.rs  dag_import.rs  debounce.rs  error.rs  hazard.rs  ignore_patterns.rs  index.rs  lib.rs  link_preflight.rs  local_change.rs  materialization.rs  peer_session.rs  presence.rs  rate_limiter.rs  rebootstrap.rs  rebootstrap_snapshot.rs  root_identity.rs  types.rs  version_vector.rs  watcher.rs
crates/yadorilink-sync-core/tests/: crash_recovery.rs  dag_checkpoint_integrity_red.rs  dag_checkpoint_sequence_integrity_red.rs  dag_compaction_boundary_integrity_red.rs  dag_compaction_restart_integrity_red.rs  dag_frontier_ghost_integrity_red.rs  dag_frontier_integrity_red.rs  dag_orphan_integrity_red.rs  dag_prune_proof_integrity_red.rs  dag_retained_history_integrity_red.rs  dag_serving_authorization_red.rs  dag_store_repair.rs  dag_two_device_wire_convergence.rs  dst_dag_catchup_chaos.rs  dst_directory_chaos.rs  dst_directory_move_edit_race.rs  dst_disk_crash_chaos.rs  dst_fidelity_lint.rs  dst_generated_sweep.rs  dst_hydration_under_fault_chaos.rs  dst_impact_map_lint.rs  dst_intermittent_catchup_chaos.rs  dst_materialization_crash_recovery.rs  dst_network_fault_chaos.rs  dst_peer_reconcile_race.rs  dst_sec_convergence.rs  dst_three_device_mesh_chaos.rs  dst_two_device_chaos.rs  dst_watcher_debounce.rs  peer_session.rs  watcher_decompose_conformance.rs
crates/yadorilink-transport/: Cargo.toml
crates/yadorilink-transport/src/: error.rs  framing.rs  key_secret_store.rs  keys.rs  lib.rs  local_candidates.rs  local_discovery.rs  peer_channel.rs  relay_auth.rs  relay_client.rs  relay_hub.rs  relay_io.rs  relay_server.rs  reliable.rs  supervise.rs  transport_hub.rs  tunn_wrapper.rs  udp_batching.rs
crates/yadorilink-transport/tests/: lan_discovery.rs  peer_channel.rs  tunnel_longevity.rs
shell-ext/macos/core/: Cargo.toml
shell-ext/macos/fileprovider-core/: Cargo.toml
shell-ext/windows/: Cargo.toml  install.ps1
shell-ext/windows/src/: cfapi.rs  context_menu.rs  ipc_client.rs  lib.rs  overlay.rs  registration.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+131 files in other folders)
