[package]
name = "yadorilink-local-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

# Registers `madsim` as a known cfg (set via `RUSTFLAGS="--cfg madsim"`
# for the deterministic-sim-testing test target only) so
# `#[cfg(madsim)]`/`#[cfg(not(madsim))]` in source don't trip clippy's
# `-D warnings` `unexpected_cfgs` lint during a normal (non-DST) build.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(madsim)"] }

[dependencies]
thiserror.workspace = true
sha2.workspace = true
tracing.workspace = true
hex = "0.4"
# Portable free-space queries
# (`available_space`/`total_space`) for the disk-headroom preflight check —
# no existing dependency in this crate (or anywhere else in the workspace,
# confirmed via search) exposed this; `std` has no stable cross-platform
# API for it.
fs2 = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3"

# See yadorilink-sync-core/Cargo.toml's identical section for why.
[target.'cfg(not(madsim))'.dependencies]
tokio.workspace = true

[target.'cfg(madsim)'.dependencies]
tokio = { version = "0.2", package = "madsim-tokio", features = ["full"] }
